# loomflow-cli

./: .gitignore  DESIGN.md  LICENSE  Makefile  README.md  TUI_INTEGRATION.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/terminal_bench/: README.md  build_wheel.sh  loom_code_agent.py  run_bench.sh  setup.sh
docs/: HARNESS_GAP_ANALYSIS.md
loom_code/: __init__.py  _post_commit.py  agent.py  approval.py  background.py  checkpoint.py  cli.py  clipboard_image.py  code_index.py  compact.py  consent.py  context_report.py  credentials.py  diagnostics.py  edit_tool.py  escalate.py  extensions.py  file_history.py  file_tools.py  git_hook.py  grep_tool.py  hooks.py  loom_section_tool.py  loop_guard.py  lsp_tools.py  mcp_host.py  mcp_specs.py  operator.py  paste.py  paths.py  permissions.py  project.py  prompts.py  render.py  repl.py  rules.py  sandboxed_bash.py  scribe.py  subagents.py  trust.py  (+6 more)
loom_code/browse/: __init__.py  act.py  observe.py  session.py  verify.py
loom_code/loominit/: __init__.py  _ast_walk.py  _files.py  _graph.py  _prompts.py  _resolve.py  _tests_map.py  annotator.py  extractor.py  injection.py  persistence.py  repomap.py  schema.py
loom_code/skills/: __init__.py
loom_code/skills/graphify/: SKILL.md  tools.py
tests/: conftest.py  live_router_check.py  test_agent.py  test_agentic_loom_retrieval.py  test_antipoison_gate.py  test_approval.py  test_approval_danger.py  test_approval_integration.py  test_auto_continue.py  test_background.py  test_checkpoint.py  test_code_index.py  test_compact.py  test_context_observability.py  test_credentials.py  test_custom_commands.py  test_diagnostics.py  test_edit_tool.py  test_escalation.py  test_extensions.py  test_file_boundary.py  test_file_history.py  test_git_hook.py  test_goal_state.py  test_graphify_file_discovery.py  test_graphify_query_tiers.py  test_graphify_wiring.py  test_grep_tool.py  test_learned_notes.py  test_loom_hooks.py  test_loop_guard.py  test_lsp_tools.py  test_mcp.py  test_paste.py  test_permissions.py  test_pricing.py  test_project.py  test_prompts.py  test_render.py  test_repl_guards.py  (+13 more)
tests/loominit/: test_annotator.py  test_ast_walk.py  test_extractor.py  test_injection.py  test_repomap_guards.py  test_schema_persistence.py
