[project]
name = "loom-code"
version = "0.1.0"
description = "loom-code — a loomflow-native terminal coding agent"
requires-python = ">=3.11"
dependencies = [
    # [litellm] pulls in LiteLLM so model strings prefixed with
    # `ollama/`, `litellm/`, `together_ai/`, `groq/`, etc. route
    # through loomflow's LiteLLMModel adapter automatically.
    # [web] pulls in httpx + duckduckgo-search for the web_tool
    # backends — /set_web wires them at runtime, but the deps need
    # to be installed up front. 0.10.14 floor brings the full
    # Team.* kwarg-forwarding sweep — ``snip_window=`` and
    # ``auto_compact_at_tokens=`` now reach ``Team.supervisor``
    # directly (previous bridge of post-construction stamping
    # removed). Carries forward all 0.10.13 token-optimisation
    # primitives (snip, auto-compact, tool-result summariser,
    # 4-of-4 Anthropic cache breakpoints, count_tokens helper)
    # and the 0.10.10+ persistent subagents / Windows compat /
    # earlier Team kwarg fixes.
    "loomflow[litellm,web]>=0.10.16",
    "rich>=13",
    # prompt_toolkit drives the REPL line editor — gives us inline
    # slash-command autocomplete (a menu pops the moment the user
    # types '/'), history (up/down arrows), and emacs/vi keybinds.
    # The de-facto standard for Python CLIs (Aider, IPython, etc.).
    "prompt-toolkit>=3.0",
    "anthropic",
    "openai",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
loom-code = "loom_code.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loom_code*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
