[project]
name = "loom-code"
version = "0.1.0"
description = "loom-code — a loomflow-native terminal coding agent"
requires-python = ">=3.11"
dependencies = [
    # [litellm] pulls in LiteLLM so model strings prefixed with
    # `ollama/`, `litellm/`, `together_ai/`, `groq/`, etc. route
    # through loomflow's LiteLLMModel adapter automatically.
    # [web] pulls in httpx + duckduckgo-search for the web_tool
    # backends — /set_web wires them at runtime, but the deps need
    # to be installed up front. 0.10.14 floor brings the full
    # Team.* kwarg-forwarding sweep — ``snip_window=`` and
    # ``auto_compact_at_tokens=`` now reach ``Team.supervisor``
    # directly (previous bridge of post-construction stamping
    # removed). Carries forward all 0.10.13 token-optimisation
    # primitives (snip, auto-compact, tool-result summariser,
    # 4-of-4 Anthropic cache breakpoints, count_tokens helper)
    # and the 0.10.10+ persistent subagents / Windows compat /
    # earlier Team kwarg fixes.
    # 0.10.18 added Router(conversation_scope="shared") so all
    # routes in loom-code's Team.router share one session_id with
    # the parent REPL, fixing the "turn 2 lost prior context" bug
    # when the classifier flipped between SIMPLE and COMPLEX.
    # 0.10.19 added strong plan_write verification: DONE
    # transitions must reference real tool_call_ids via
    # verified_by (each id usable once — kills "one edit, five
    # claims" hallucination) OR carry a substantive finding.
    # ReAct + ReWOO call record_tool_call; other architectures
    # get a soft-cutover finding-fallback.
    # 0.10.20 made AutoExtractMemory background-by-default:
    # remember() schedules the LLM fact-extraction as a fire-
    # and-forget asyncio task instead of awaiting it. Kills the
    # per-turn "next loom: prompt comes back late" latency
    # without disabling fact extraction. Loom-code relies on
    # this — without it the previous explicit auto_extract=False
    # band-aid would have to come back.
    "loomflow[litellm,web]>=0.10.21",
    "rich>=13",
    # prompt_toolkit drives the REPL line editor — gives us inline
    # slash-command autocomplete (a menu pops the moment the user
    # types '/'), history (up/down arrows), and emacs/vi keybinds.
    # The de-facto standard for Python CLIs (Aider, IPython, etc.).
    "prompt-toolkit>=3.0",
    "anthropic",
    "openai",
    # graphifyy — knowledge-graph extraction over the project.
    # Wired into the REPL's /graphify slash command + the desktop
    # IDE's graphify chip. Moved from an optional extra to a hard
    # dep so ``pip install -e .`` (or ``pip install loom-code``)
    # gives users a working ``/graphify on`` out of the box — no
    # "install with: pip install 'loom-code[graphify]' then re-run"
    # friction. The install adds ~30s + a few hundred MB
    # (tree-sitter grammars, NetworkX, Leiden); acceptable price
    # for zero-config knowledge-graph integration.
    "graphifyy",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
loom-code = "loom_code.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loom_code*"]

# Bundled skills ship as package data — ``SKILL.md`` + ``tools.py``
# under ``loom_code/skills/<name>/`` get installed alongside the
# code so ``importlib.resources.files('loom_code.skills')`` finds
# them at runtime. Without this the SKILL.md files would be
# skipped by setuptools' default Python-only inclusion.
[tool.setuptools.package-data]
"loom_code.skills" = ["*/*.md", "*/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
