[project]
name = "loom-code"
version = "0.1.1"
description = "loom-code — a loomflow-native terminal coding agent"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Anupam Nautiyal" }]
keywords = ["ai", "agent", "cli", "coding-assistant", "llm", "loomflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.11"
dependencies = [
    # [litellm] pulls in LiteLLM so model strings prefixed with
    # `ollama/`, `litellm/`, `together_ai/`, `groq/`, etc. route
    # through loomflow's LiteLLMModel adapter automatically.
    # [web] pulls in httpx + duckduckgo-search for the web_tool
    # backends — /set_web wires them at runtime, but the deps need
    # to be installed up front. 0.10.14 floor brings the full
    # Team.* kwarg-forwarding sweep — ``snip_window=`` and
    # ``auto_compact_at_tokens=`` now reach ``Team.supervisor``
    # directly (previous bridge of post-construction stamping
    # removed). Carries forward all 0.10.13 token-optimisation
    # primitives (snip, auto-compact, tool-result summariser,
    # 4-of-4 Anthropic cache breakpoints, count_tokens helper)
    # and the 0.10.10+ persistent subagents / Windows compat /
    # earlier Team kwarg fixes.
    # 0.10.18 added Router(conversation_scope="shared") so all
    # routes in loom-code's Team.router share one session_id with
    # the parent REPL, fixing the "turn 2 lost prior context" bug
    # when the classifier flipped between SIMPLE and COMPLEX.
    # 0.10.19 added strong plan_write verification: DONE
    # transitions must reference real tool_call_ids via
    # verified_by (each id usable once — kills "one edit, five
    # claims" hallucination) OR carry a substantive finding.
    # ReAct + ReWOO call record_tool_call; other architectures
    # get a soft-cutover finding-fallback.
    # 0.10.20 made AutoExtractMemory background-by-default:
    # remember() schedules the LLM fact-extraction as a fire-
    # and-forget asyncio task instead of awaiting it. Kills the
    # per-turn "next loom: prompt comes back late" latency
    # without disabling fact extraction. Loom-code relies on
    # this — without it the previous explicit auto_extract=False
    # band-aid would have to come back.
    # mcp: bundle the MCP SDK so loom-code speaks MCP out of the box
    # (Linear / Sentry / Postgres / Playwright / … servers). Matches the
    # competition — Claude Code / Cursor / Codex don't make you install a
    # plugin to use MCP. Discovery degrades gracefully if it's ever absent.
    # >=0.10.25 carries the tool-call arg coercion + PEP 563 schema-typing
    # fix that loom-code's typed tools (edit replace_all=bool, etc.) rely on.
    # <0.11 ceiling: loomflow is pre-1.0, so a minor bump may break the
    # composed surfaces (Team kwargs, stop hooks, working blocks). Raise
    # the ceiling deliberately after testing, not by accident on a
    # user's machine mid-`pipx upgrade`.
    "loomflow[litellm,web,mcp]>=0.10.23,<0.11",
    "rich>=13",
    # prompt_toolkit drives the REPL line editor — gives us inline
    # slash-command autocomplete (a menu pops the moment the user
    # types '/'), history (up/down arrows), and emacs/vi keybinds.
    # The de-facto standard for Python CLIs (Aider, IPython, etc.).
    "prompt-toolkit>=3.0",
    "anthropic",
    "openai",
    # graphifyy — knowledge-graph extraction over the project.
    # Wired into the REPL's /graphify slash command + the desktop
    # IDE's graphify chip. Moved from an optional extra to a hard
    # dep so ``pip install -e .`` (or ``pip install loom-code``)
    # gives users a working ``/graphify on`` out of the box — no
    # "install with: pip install 'loom-code[graphify]' then re-run"
    # friction. The install adds ~30s + a few hundred MB
    # (tree-sitter grammars, NetworkX, Leiden); acceptable price
    # for zero-config knowledge-graph integration. Floor + ceiling pin
    # the query-tier contract (DIRECT/NEIGHBOR/COMMUNITY) the graphify
    # skill's tools depend on.
    "graphifyy>=0.8.11,<0.9",
    # jedi powers the LSP navigation tools (go_to_definition /
    # find_references / hover) — pure-Python static analysis, the
    # engine behind most editors' Python intelligence. No
    # language-server process; lightweight.
    "jedi>=0.19",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "bump-my-version>=0.30"]

[project.urls]
Homepage = "https://github.com/Anurich/loomflow-cli"
Repository = "https://github.com/Anurich/loomflow-cli"
Issues = "https://github.com/Anurich/loomflow-cli/issues"

[project.scripts]
loom-code = "loom_code.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loom_code*"]

# Bundled skills ship as package data — ``SKILL.md`` + ``tools.py``
# under ``loom_code/skills/<name>/`` get installed alongside the
# code so ``importlib.resources.files('loom_code.skills')`` finds
# them at runtime. Without this the SKILL.md files would be
# skipped by setuptools' default Python-only inclusion.
[tool.setuptools.package-data]
"loom_code.skills" = ["*/*.md", "*/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

# ``bump-my-version`` reads ``current_version`` here, edits every file
# listed below in lockstep, commits, and tags. The Makefile target
# ``release`` calls it then pushes commit + tag, which fires
# ``.github/workflows/release.yml`` for the PyPI upload (trusted
# publishing — no tokens). Daily flow stays plain git; ``make release
# BUMP=patch|minor|major`` is the explicit "this is a release" flag.
[tool.bumpversion]
current_version = "0.1.1"
search = "{current_version}"
replace = "{new_version}"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
message = "Release v{new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "loom_code/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
